[gd_scene load_steps=12 format=2]

[ext_resource path="res://diamond.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/SPRITES/meat_coin_frames/meat_coin_2.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/SPRITES/meat_coin_frames/meat_coin_3.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/soundsandmusic/sounds/confirmation_002.ogg" type="AudioStream" id=4]
[ext_resource path="res://ASSETS/SPRITES/meat_coin_frames/meat_coin_4.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/SPRITES/meat_coin_frames/meat_coin_1.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/SPRITES/meat_coin_frames/meat_coin_5.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "bounce"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, -84 ), Vector2( 2, -29 ) ]
}

[node name="diamond" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -2.32652
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5875, 0.5875 )
frames = SubResource( 2 )
animation = "spin"
frame = 3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/bounce = SubResource( 4 )

[node name="collect_diamond_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[connection signal="body_entered" from="." to="." method="_on_diamond_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
